[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "arcflash-calc"
authors = [{name = "Li-aung Yip", email = "github@penwatch.net"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
dynamic = ["version", "description"]
dependencies = [
    "pint >= 0.20.1",
]

[project.urls]
Source = "https://github.com/LiaungYip/arcflash"

[tool.flit.module]
name = "arcflash"

[tool.flit.sdist]
exclude = [
    ".gitignore",
    "arcflash/ieee_1584/additional_test_cases/",
]